--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="btn_broadcast">Broadcast Message</string>
     <string name="std_name">Student Name</string>
     <string name="add_btn">Add Name</string>
+    <string name="get_btn">Get List</string>
     <string name="std_dept">Student department</string>
 </resources>
