--- a/MyFirstApp/app/src/main/res/values/strings.xml
+++ b/MyFirstApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My FirstApp</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="send">Send</string>
 </resources>
